# qt-test-service

./: .gitignore  CMakeLists.txt  MyThread.cpp  MyThread.h  README.md  daemon.sh  main.cpp  toolchain-platform-unix-linux64-qt5.cmake
